Raghad updateds